# proto-ocaml

./: .dockerignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  publish.yml  release-pr.yml  release.yml
src/: lib.rs  opam.rs  proto.rs  version_files.rs
tests/: public_contract_test.rs
tests/e2e/: Dockerfile  run.sh  verify.sh
